@@ -23,6 +23,8 @@ Fernando Lopez-Lezcano
 2008-06-02 Stephane Letz  <letz@grame.fr>
 
 	* Cleanup and correct wscript for example-clients.
+	* Add a test for coherent freewheel state in JackDebugClient. 
+	* Cleanup JackMutex class.
 
 2008-05-31 Stephane Letz  <letz@grame.fr>
 
